--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -20,3 +20,5 @@ link_directories(${PROJECT_SOURCE_DIR}/lib)
 add_subdirectory(src)
 # example包含了mprpc框架使用的示例代码
 add_subdirectory(example)
+
+include(asan.cmake)
